0-bak/template-service/auth/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: app-0
spec:
  #externalTrafficPolicy: Cluster  # default
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: auth
  sessionAffinity: None # default
  type: ClusterIP
