0-bak/template-service/auth/k8s/ingress-route.yml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth
  namespace: app-0
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-env0-app0
  routes:
    - match: Host(`app0.env0.luojm.com`) && PathPrefix(`/auth`) 
      kind: Rule
      services:
      - name: auth
        kind: Service
        namespace: app-0
        port: 80
